[package]
name = "zkbeacon_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true

[dependencies]
clap = { version = "^4.3.12", features = ["derive"] }
zkbeacon_powdr = { path = "../zkbeacon_powdr" }


[[bin]]
name = "zkbeacon"
path = "src/main.rs"
