[package]
name = "zkbeacon_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
ethers = "2.0.9"
eyre = "0.6.8"
helios = { git = "https://github.com/HappyZKFriends/helios.git" }
tokio = "1.32.0"
